# programa23052022

./: README.md
programa/: CMakeLists.txt  Makefile  sdkconfig  sdkconfig.old
programa/main/: CMakeLists.txt  HTTP_SERVER_task.c  HTTP_SERVER_task.h  LORA_RECEIVER_task.c  LORA_RECEIVER_task.h  OLED_DISPLAY_task.c  OLED_DISPLAY_task.h  UART_ECHO_RS485_task.c  UART_ECHO_RS485_task.h  WIFI_SMARTCONFIG_task.c  WIFI_SMARTCONFIG_task.h  config.h  main.c  main.h
programa/main/libraries/: HTTP_SERVER.c  HTTP_SERVER.h  LORA.c  UART_ECHO_RS485.c  UART_ECHO_RS485.h  WIFI_SMARTCONFIG.c  WIFI_SMARTCONFIG.h  font.h
